// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean passes initialValue 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "boolean",
  },
  "i am initial",
]
`;

exports[`boolean uses boolean 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "boolean",
  },
  undefined,
]
`;

exports[`number passes initialValue 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "number",
  },
  "i am initial",
]
`;

exports[`number uses text 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "number",
  },
  undefined,
]
`;

exports[`select passes initialValue 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "select",
  },
  "i am initial",
]
`;

exports[`select uses select 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "select",
  },
  undefined,
]
`;

exports[`text defaults to text 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
  },
  undefined,
]
`;

exports[`text passes initialValue 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "text",
  },
  "i am initial",
]
`;

exports[`text uses text 1`] = `
Array [
  Object {
    "label": "the label",
    "name": "fieldName",
    "type": "text",
  },
  undefined,
]
`;
